--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,10 @@
 **/*.cbp
 **/CMakeScripts
 **/compile_commands.json
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+*.code-workspace
